Non-unified source build fix of December 2024 (part 1) https://bugs.webkit.org/show_bug.cgi?id=283880

Unreviewed non-unified build fix.
Added missing #include.

* Source/WTF/wtf/UniqueRef.h:
* Source/WebCore/css/query/MediaQueryEvaluator.cpp:
* Source/WebCore/layout/Verification.cpp:
* Source/WebCore/page/Chrome.cpp:
* Source/WebCore/page/InteractionRegion.cpp:
* Source/WebCore/page/LocalDOMWindow.cpp:
* Source/WebCore/page/PageConfiguration.cpp:
* Source/WebCore/rendering/TextBoxTrimmer.cpp:
* Source/WebCore/rendering/line/LineBreaker.h:
* Source/WebCore/rendering/svg/RenderSVGText.cpp:

Canonical link: https://commits.webkit.org/287200@main