Source/WebCore/rendering/svg/RenderSVGText.cpp
@@ -47,6 +47,7 @@
 #include "RenderSVGInline.h"
 #include "RenderSVGInlineText.h"
 #include "RenderSVGRoot.h"
+#include "RenderSVGTextPath.h"
 #include "SVGElementTypeHelpers.h"
 #include "SVGInlineFlowBox.h"
 #include "SVGInlineTextBox.h"
